--- a/notes.org
+++ b/notes.org
@@ -1,4 +1,8 @@
 
+* Questions
+** What interactions between ProteinViz and SequenceViz?
+** Between each SequenceViz?
+
 * Fel d 1 Viz
 ** Components
 *** ProteinViz
