--- a/notes.org
+++ b/notes.org
@@ -1,9 +1,9 @@
 
 * New questions
-** TODO What to do about MNPs?
-   How to display? Why only one position?
+** TODO Explain parsing script and format
 ** TODO What about Ile84, Ser85, Ser86?
-*** No data or "-" should display or not?
+*** 84 is blank
+***  "-" should display or not?
 ** TODO Fasta sequence for 2EJN doesn't seem to match up with chain1/2
    i.e. 
    fasta:   MEICPAVKR
@@ -11,7 +11,7 @@
    chain 2: MRGALLVLA
 *** How to know which residue to highlight onClick?
 ** TODO What's an ambiguity?
-
+** TODO coordinate colors with ribbon in surface mode
 * Here's the information I'd need:
 ** Sequence for each chain
 ** Structure
